tests/ui/frontmatter/unclosed-1.stderr
error: unclosed frontmatter
  --> $DIR/unclosed-1.rs:1:1
   |
LL | / ----cargo
...  |
LL | | fn main() {}
   | |_________________________________________________________________________________^
   |
note: frontmatter opening here was not closed
  --> $DIR/unclosed-1.rs:1:1
   |
LL | ----cargo
   | ^^^^

error[E0601]: `main` function not found in crate `unclosed_1`
  --> $DIR/unclosed-1.rs:8:82
   |
LL | fn main() {}
   |                                                                                 ^ consider adding a `main` function to `$DIR/unclosed-1.rs`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0601`.
